--- a/css/icons.css
+++ b/css/icons.css
@@ -32,16 +32,37 @@
     color: forestgreen;
 }
 
-#img {
+.img {
    display: inline-block;
     width: 25%;
 }
 
-#link {
+.link {
     display: inline-block;
 }
 
 #or {
     text-align: center;
     line-height: 8;
+}
+
+.right {
+    float: right;
+    margin-top: 3%;
+    padding-right: 10px;
+}
+
+.left {
+    float: left;
+    margin-top: 3%;
+    padding-left: 10px;
+}
+
+.placeholder {
+    width: 100%;
+    height: 35%;
+    border: solid darkslategrey 1px;
+    display: table;
+    margin: 0 auto;
+    background-color: whitesmoke;
 }
