--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html, body {
 .drag-down {
     background-color: darkslategray;
     text-align: center;
+    height: 3%;
 }
 
 section {
@@ -61,7 +62,33 @@ section {
     right: 0;
 }
 
+.page-nav {
+    width: 100%;
+    top: 0;
+    position: fixed;
+    background-color: darkslategray;
+    left: 0;
+    height: 6%;
+}
+
 button {
     border: none;
     background-color: transparent;
+}
+
+#upload{
+    display:none
+}
+
+.margin {
+    margin-top: 25%;
+}
+
+.text-input {
+    margin-top: 5%;
+}
+
+#description {
+    width: 100%;
+    height: 80px;
 }
