--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html, body {
-    background: url("../images/background.jpg") fixed;
+    background-image: url("../images/background.jpg");
+    background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
     height: 100%;
     padding: 0;
@@ -67,7 +68,7 @@ section {
     position: fixed;
     background-color: darkslategray;
     left: 0;
-    height: 8%;
+    height: 45px;
 }
 
 button {
