--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ section {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: white;
+    background-color: darkslategrey;
 }
 
 .nav li a {
