--- a/css/icons.css
+++ b/css/icons.css
@@ -66,3 +66,10 @@
     margin: 0 auto;
     background-color: whitesmoke;
 }
+
+.colorPrev {
+    border: solid black 1px;
+    width: 100px;
+    height: 100px;
+
+}
