--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
     background-image: url("../images/background.jpg");
     background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
+    font-size: 4.8vw;
     height: 100%;
     padding: 0;
     margin: 0;
